syntax = "proto3";

package rivet.backend.job.log;

import "proto/common.proto";

enum StreamType {
	STD_OUT = 0;
	STD_ERR = 1;
}

message LogEntry {
	// Timestamp the log was received.
	int64 ts = 1;

	// Message that was logged.
	bytes message = 3;
}

